[gd_scene load_steps=4 format=3 uid="uid://b0tliep2541yj"]

[ext_resource type="Script" uid="uid://dji5ke5aomc67" path="res://main/world.gd" id="1_sdvrk"]
[ext_resource type="PackedScene" uid="uid://duj5un7cu7q6a" path="res://map/tower.tscn" id="2_b3acj"]
[ext_resource type="PackedScene" uid="uid://b6uvxvcf0811" path="res://entities/player/player.tscn" id="3_mnuad"]

[node name="World" type="Node"]
script = ExtResource("1_sdvrk")

[node name="Tower" parent="." instance=ExtResource("2_b3acj")]
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("3_mnuad")]
position = Vector2(32, 153)
metadata/_edit_group_ = true

[node name="CameraFollow" type="Camera2D" parent="Player"]
zoom = Vector2(4, 4)
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_left_margin = 0.1
drag_right_margin = 0.1

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(32, 153)

[connection signal="player_exited_screen" from="Tower" to="." method="_on_tower_player_exited_screen"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
